FIXED: see visible_status and all notes from deleted_users.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
-body            { font-family: Helvetica; background: #eee; }
+body            { font-family: "Open Sans",sans-serif; background: #eee; }
 
-h1.post         { border-bottom: 2px solid #444444; font-family: 'Georgia', serif; margin: 0; }
-h2.post         { font-size: 1em; color: #08409A; font-family: 'Georgia', serif; margin: 0;}
-text            { color: crimson; font-family: cursive; font-size: 12px;}
-small           { font-family: Modern; font-size: 11px;}
+h1.post         { border-bottom: 2px solid #444444; font-family: Tahoma,Arial sans-serif; margin: 0; }
+h2.post         { font-size: 1em; color: #08409A; font-family: Tahoma,Arial sans-serif; margin: 0;}
+text            { color: crimson; font-family: Tahoma,Arial sans-serif; font-size: 12px;}
+small           { font-family: 'Open Sans',Sans-serif; font-size: 11px;}
 pre             { white-space: pre-wrap; margin: 10px; }
 hr              { width:97%; }
 textarea        { max-width:99%; width:100%; }
@@ -69,6 +69,7 @@ header {
 
 #user_list {
     display: none;
+    font-family: Tahoma,Arial sans-serif;
    	border-radius: 5px;
 	border: 2px solid #BFBFBD;
 	background-color: #E8E8E5;
@@ -83,6 +84,7 @@ header {
 
 .flash {
     display: none;
+    font-family: Tahoma,Arial sans-serif;
 	background: #cee5F5;
 	padding: 0.5em;
 	border: 1px solid #aacbe2;
@@ -95,7 +97,7 @@ header {
 
 .message_ok {
     display: none;
-    display: none;
+    font-family: Tahoma,Arial sans-serif;
 	background: #D8F3DC;
 	padding: 0.5em;
 	border: 1px solid #AAE2B1;
@@ -108,6 +110,7 @@ header {
 
 .message_error {
     display: none;
+    font-family: Tahoma,Arial sans-serif;
 	background: #f0d6d6;
 	padding: 0.5em;
 	border: 1px solid #D69090;
